2006-12-01 [paul]	2.6.0cvs17

	* tools/kdeservicemenu/README
	* tools/kdeservicemenu/claws-mail-kdeservicemenu.pl
	* tools/kdeservicemenu/install.sh
	* tools/kdeservicemenu/template_claws-mail-attach-files.desktop
	* tools/kdeservicemenu/template_claws-mail-compress-attach.desktop
		backport fix from 2.6.0cvs74

2006-12-01 [wwp]	2.6.0cvs16-stable

	* src/summaryview.c
		backport bug fix from 2.6.0cvs71:
		As the list may change while the mark as read delay
		runs, we can't rely on the 'row' pointer, which can
		be invalid when the timeout is called. As the mark
		as read is only done if the message is still selected,
		use summaryview->selected instead. Thanks to Colin.

2006-11-28 [paul]	2.6.0cvs15-stable

	* src/compose.c
		backport bug fix from 2.6.0cvs60:
		fix bug that caused the wrong recipient
		to be selected when replying to a msg
		which is From one of our accounts to
		another of our accounts

2006-11-25 [paul]	2.6.0cvs14-stable

	* src/summaryview.c
		backport fix from 2.6.0cvs59:
		don't change the From column title to
		To if the To column is visible

2006-11-24 [paul]	2.6.0cvs13-stable

	* tools/kdeservicemenu/template_claws-mail-compress-attach.desktop
	* tools/kdeservicemenu/template_sylpheed-compress-attach.desktop
		missed in last commit

2006-11-24 [paul]	2.6.0cvs12-stable

	* .cvsignore
	* AUTHORS
	* COPYING
	* INSTALL
	* Makefile.am
	* NEWS
	* README
	* RELEASE_NOTES
	* autogen.sh
	* claws-mail-128x128.png
	* claws-mail-64x64.png
	* claws-mail.desktop
	* claws-mail.ico
	* claws-mail.pc.in
	* claws-mail.png
	* configure.ac
	* sylpheed-claws-128x128.png
	* sylpheed-claws-64x64.png
	* sylpheed-claws.desktop
	* sylpheed-claws.ico
	* sylpheed-claws.pc.in
	* sylpheed-claws.png
	* debian/README.Debian
	* debian/changelog
	* debian/claws-mail.desktop
	* debian/claws-mail.menu
	* debian/claws-mail.postinst.debhelper
	* debian/claws-mail.postrm.debhelper
	* debian/control
	* debian/copyright
	* debian/files
	* debian/rules